onglet presentation dahira brute sans style

--- a/RecetteV2/dahira-presentation.html
+++ b/RecetteV2/dahira-presentation.html
@@ -72,8 +72,6 @@
             }
 
           )
-
-
     });
   </script>
 </head>
@@ -255,12 +253,6 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a href="projets.html" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               PROJETS
-            </a>
-        </li>
-
-        <li class="nav-item dropdown">
             <a href="actualites.html" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               ACTUALITES
             </a>
@@ -270,32 +262,20 @@
     <ul class="navbar-nav" data-hover="dropdown">
         <li class="nav-item dropdown">
             <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               BOUTIQUE
+               LIBRAIRIES
             </a>
 
             <ul class="dropdown-menu">
                 <li class="dropdown dropdown-submenu">
-                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Posters</a>
+                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ALKHOURANE</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Type 1</a></li>
-                        <li><a class="dropdown-item" href="#">Type 2</a></li>
-                        <li><a class="dropdown-item" href="#">Type 3</a></li>
+                        <li><a class="dropdown-item" href="#">Coran</a></li>
                     </ul>
                 </li>
                 <li class="dropdown dropdown-submenu">
-                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khassidas</a>
+                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">KHASSIDAS</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Jukki</a></li>
-                        <li><a class="dropdown-item" href="#">Dol</a></li>
-                        <li><a class="dropdown-item" href="#">Formats</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown dropdown-submenu">
-                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vetements</a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Type 1</a></li>
-                      <li><a class="dropdown-item" href="#">Type 2</a></li>
-                      <li><a class="dropdown-item" href="#">Type 3</a></li>
+                      <li><a class="dropdown-item" href="#">Jukki</a></li>
                     </ul>
                 </li>
             </ul>
@@ -320,7 +300,7 @@
 
         <li class="nav-item dropdown megamenu">
             <a class="nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                MEDIATEQUE
+                MEDIATHEQUE
             </a>
 
             <div class="dropdown-menu">
@@ -456,9 +436,16 @@
                 </div>
             </div>
         </li>
+
+
+        <li class="nav-item dropdown">
+            <a href="contact.html" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               CONTACTS
+            </a>   
+        </li>      
     </ul>
 
-        <div class="pl-4 d-none d-lg-inline-block d-xl-inline-block">
+    <div class="pl-4 d-none d-lg-inline-block d-xl-inline-block">
         <ul class="navbar-nav ml-auto" data-hover="dropdown">
             <!-- Search button -->
             <li class="nav-item nav-item-icon hidden-md-down" data-toggle="global-search">
@@ -468,74 +455,66 @@
                     </span>
                 </a>
             </li>
-
-                        <li class="nav-item nav-item-icon hidden-md-down">
+            <li class="nav-item nav-item-icon hidden-md-down">
                 <a href="#" class="nav-link btn-st-trigger" data-effect="st-effect-1">
                     <span><i class="fa fa-bars"></i></span>
-                </a>
+                </a>   
             </li>
-                    </ul>
+         </ul>
     </div>
+
     </div>
     </div>
 </nav>
 
-<!-- Revolution Slider -->
+
 <div id="rev_slider_467_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" style="background-color: #ffffff; padding: 0; margin: 0 auto;" data-alias="classic-carousel26" data-source="gallery">
     <div id="rev_slider_467_1" class="rev_slider fullwidthabanner" style="display: none;" data-version="5.4.1">
-   <div class="container">
-     <div class="row">
-       <div class="col-lg-12">
-         <h1 class="mt-5" align="center">Présentation </h1>
-         <p>
-           Le Dahira Diawwartoulah Paris a été créée sous le « Ndigueul » de Serigne Abdou Aziz MBACKE ibn Serigne Khadim Awa Ba en 2011.  Diawartoulah Paris avant d’être un Dahira est une Daara, qui a pour principale mission la mise en place des cadres de recherche, de perfectionnement spirituel et d’assimilation des valeurs culturelles de L’Islam pour vivre pleinement notre « mouridité » à tout point de vue et sans état d’âme dans la région d’Ile-de-France et dans toute la France dans les pures traditions des anciens compagnons du Cheikh. Notre seul objectif terrestre c’est d’œuvrer pour le Cheikh qui au prix de sa vie a tout fait dans son combat pour que nous soyons des musulmans exemplaires.<br>
-               Nos activités permanentes :<br>
-             - Les dahiras organisés tous les samedis<br> 
-             - Grand Magal de Touba<br> 
-             - Formation religieuse<br>    
-             - Orientation <br>
-             - Coopération  <br>
-             - Recherche et projets <br>   
-             - Thiant annuel sous la présence de Serigne Abdou Aziz MBACKE<br>
-            Dieuwrigne de tous les Dahiras Diawartoulah de France : Serigne Birane SECK <br>
-           Dieuwrigne du Dahira Diawartoulah Paris : Serigne Khadim MBODJI <br>
-           Coordonnateur du Dahira Diawartoulah Paris: Serigne Bassirou CISSE  <br>
-         </p>
-       </div>
-     </div>
-   </div>
-        <div class="tp-bannertimer" style="height: 7px; background-color: rgba(255, 255, 255, .25);"></div>
+        <h1 class="mt-5" align="center">Présentation</h1>
+        <article>
+        <p style="font-size: 0.9em; margin-bottom: 0.2em; line-height: 1.4em; text-align: center;">Serigne Abdou Aziz MBACKÉ est un digne guide religieux fortement investi dans l'éducation religieuse desmusulmans,l'entraide entre les condisciples mourides mais aussi dans l'aide sociale vis à vis des personnes en situation précaire. En ce sens, il s’assura de créer à chaque étape de ses nombreux voyages des Dahiras/Daaras (association culturelle à dimension sociale).  
+        Lors de sa venue en 2011 à Paris, sous son ndiguël (ordre) doublé par l'approbation de Serigne Sidy Makhtar MBACKÉ, Khalife général des mourides à l'époque,il recommanda au responsable moral Jeuwriñ Birane Mbole SECK de créer le Dahira Touba Diawartoulah Paris. 
+        À cette structure, il donna deux grandes orientations à savoir : <br>
+              ❏ L’apprentissage et la mémorisation du Saint Coran, des Hadiths et les enseignements de Cheikhoul Khadim.<br>
+              ❏ La communion des forces afin de faciliter l'entraide et l'assistance envers les personnes démunies. <br>
+        Notre seul et unique objectif terrestre est bien évidemment d’œuvrer pour le Cheikh qui, durant toute sa vie, n’a ménagé aucun effort dans son combat afin que nous soyons des musulmans exemplaires. </p>
+       <!--
+        <div class="tp-bannertimer" style="height: 7px; background-color: rgba(255, 255, 255, .25); font-size: 0.8em; margin: 0; padding: 0;">
+            
+        </div>-->
+        </article>
     </div>
 </div>
-            <!-- END: Revolution Slider -->
+
         </div>
     </div>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
     <!-- FOOTER -->
 <footer id="footer" class="footer ">
+    <div class="footer-bottom">
+        <div class="container container-sm">
+            <div class="row">
+                <div class="col">
+                    <div class="copyright text-center">Copyright &copy; 2019 <a href="#" target="_blank">
+                        <strong style="color:green;">Diawartoulah</strong>
+                    </a> -  All rights reserved
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--
 
+         
+    -->
 
-<div class="footer-bottom">
-<div class="container container-sm">
-<div class="row">
-<div class="col">
-    <div class="copyright text-center">
-        Copyright &copy; 2019                        <a href="#" target="_blank">
-            <strong style="color:green;">Diawartoulah</strong>
-        </a> -
-        All rights reserved
     </div>
-</div>
-</div>
-</div>
-</div>
 </footer>
+
+
+
+
+
 
     <!-- Core -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
